--- a/assets/style.css
+++ b/assets/style.css
@@ -517,3 +517,46 @@ form input, form textarea{
         font-size: 11px;
     }
 }
+@media (min-width: 425px) and  (max-width: 768px){
+    .nav_bar {
+        right: 10px;
+    }
+    .nav_bar li {
+        padding: 5px;
+    }
+    .nav_bar a{
+        font-size: 15px;
+    }
+    main:nth-child(2)>section>img {
+        height: 55%;
+        width: 57%;
+        margin: 18px 0 0 0;
+        border-style: none;
+        position: absolute;
+        left: 20%;
+        top: 10%;
+    }
+    .home-container div h1 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        margin: -2px 0px 2px;
+    }
+
+    .home-container {
+        position: absolute;
+        left: 10%;
+        top: 60%;
+    }
+    .social-media a {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        border: 2px solid #FF014F;
+        text-decoration: none;
+        margin: 0px 20px 30px 0;
+        font-size: 15px;
+    }
+}
