--- a/assets/style.css
+++ b/assets/style.css
@@ -441,12 +441,11 @@ form input, form textarea{
         padding: 10px;
     }
 
-
     .projects-list div h4 {
         font-size: 20px;
     }
 
-}
+}++
 
 @media (min-width: 768px)and (max-width: 1024px) {
     .home-container div h1 {
