--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     outline: none;
     border: none;
     box-sizing: border-box;
-    font-family:  'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -44,7 +46,7 @@ body{
 }
 
 section{
-    height: 100vh;
+   /* height: 100vh;*/
 }
 
 .home{
@@ -96,13 +98,13 @@ section{
 }
 
 main:nth-child(2)>section>img{
-    height: 100%;
-    width: 57%;
-    margin: 18px 0 0 0;
+    height: 90%;
+    width: 50%;
+    margin: 20px 0 0 0;
     border-style: none;
     position: absolute;
     left: 40%;
-    top: 4%;
+    top: 10%;
 }
 
 main:nth-child(2)>section>a{
@@ -119,31 +121,40 @@ main:nth-child(2)>section>a{
 h3{
     font-size: 45px;
     font-weight: 750;
-    margin: 110px 0 0 0;
+    margin: 60px 0;
+    font-family: Quicksand, sans-serif;
 }
 h3 span{
     color: #FF014F;
+    font-family: Quicksand, sans-serif;
 }
 
-/*----about-----*/
+/*=============================================================about===============================================*/
 .about{
-    position: relative;
-
-}
-.about img{
-    height: 60%;
-    width: 40%;
+    /*position: relative;*/
+    padding: 60px 10%;
 }
 .about-container{
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: space-between;
-    padding: 60px 12% 0 12%;
+    /*padding: 60px 12% ;*/
     height: 100%;
 }
+.about-container div{
+    border: 2px solid white;
+    /*height: 100%;
+    width: 40%;*/
+    margin: 5% 5% 0 0;
+}
+.about-container div img{
+    height: 100%;
+    width: 100%;
+    /*padding: 5% 0 0;*/
+}
 .about-container p{
-    height: 50%;
-    width: 60%;
+    /*height: 50%;
+    width: 60%;*/
     text-align: justify;
     margin: 50px 0 0 0;
 }
@@ -156,11 +167,13 @@ h3 span{
     font-weight: bold;
     border-radius: 20px;
     position: absolute;
-    left: 44%;
-    top: 80%;
+    left: 30%;
+    top: 100%;
 }
 .journey{
+    /*height: 100vh;*/
     position: relative;
+    padding: 100px 0 0;
 }
 .journey-topic{
     position: absolute;
@@ -168,8 +181,10 @@ h3 span{
     font-weight: 600;
     font-size: 32px;
 }
+.journey-container-box{
+}
 .journey-container{
-    height: 80%;
+    /*height: 80%;*/
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -177,7 +192,7 @@ h3 span{
 }
 .journey-container div{
     height: calc(100%/4);
-    width: 90%;
+    width: 100%;
     border: 2px solid white;
     padding: 2%;
 }
@@ -195,21 +210,23 @@ h3 span{
     left: 30px;
 }
 .skills-container{
-    position: absolute;
+    position: relative;
     left: 30px;
     top: 90%;
     padding: 40px 10%;
     height: 200px;
     width: 80%;
+    display: inline-flex;
 }
 .skills-container img{
     height: 80px;
     width: 80px;
-    display: inline-flex;
-    flex-direction: column;
-    margin: 0 10px;
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
+    gap: 10px;
+    margin: 20px 10px;
 }
-/*services*/
+/*====================================================services===========================================*/
 .services{
     padding: 60px 10%;
 }
@@ -220,32 +237,39 @@ h3 span{
     margin: 40px 20px;
 }
 .services-list div{
-    background: black;
+    background: #202337;
     padding: 30px ;
     font-size: 13px;
     font-weight: 100;
     border-radius: 20px ;
-    border: 1px solid white;
+    border: 1px solid #353250;
     text-align: justify;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+
 }
 .services-list div i{
-    font-size: 60px;
+    font-size: 40px;
     margin: 0 0 20px 0;
+
 }
 .services-list h4{
     font-size: 24px;
     margin: 20px 0 ;
+    text-align: center;
+}
+
+.services-list div p{
+    text-align: center;
 }
 .services-list div:hover{
     background-color: #FF014F;
     color: #ffffff;
 }
 
-/*projects*/
+/*======================================================projects===============================================*/
 .projects{
     padding: 60px 10%;
     width: 100%;
-    height: 100vh;
     position: relative;
 }
 .projects-list{
@@ -267,8 +291,9 @@ h3 span{
 .projects-list div img{
     width: 100%;
     height: 86%;
-    border: 5px solid white;
+    border: 1px solid #353250;
     border-radius: 15%;
+    padding: 5px;
 }
 .projects-list div h4{
     font-size: 20px;
@@ -277,41 +302,84 @@ h3 span{
 
 }
 
-/*assignment*/
-
-.assignment-container{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-}
-
-.assignment-container div{
-    border: 2px solid white;
-    height: 60%;
-    width: 50%;
+/*=======================================================assignment=============================================*/
+.assignments{
+    padding: 60px 10%;
     position: relative;
-    margin: 10px;
 }
 
-.assignment-container div img{
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+.assignments a{
+    right: 100px;
+    bottom: 0px;
     margin: auto;
     position: absolute;
+    font-size: 40px;
+}
+.assignment-container{
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
 }
 
-.assignment-container div h4{
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-
+.assignment-container .assignment-card{
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem black;
+    overflow: hidden;
+    display: flex;
 }
 
-/*gallery*/
+.assignment-card img{
+    width: 100%;
+    transition: 5s ease;
+}
+.assignment-card:hover img{
+    transform: scale(1.1);
+}
+
+.assignment-card .assigment-layer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000712;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    -ms-flex-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    transition: .5s ease;
+    opacity: 0.8;
+}
+.assignment-card:hover .assigment-layer{
+    transform: translateY(0);
+}
+
+.assigment-layer h4{
+    font-size: 1.5rem;
+    opacity: 2;
+}
+
+.assigment-layer a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 2px solid white;
+    margin: 10%;
+}
+.assigment-layer a img{
+    width: 30px;
+    height: 30px;
+}
+
+/*==========================================================gallery===============================================*/
 .gallery{
     position: relative;
 }
@@ -344,7 +412,7 @@ h3 span{
     border-radius: 10px;
 }
 
-/*contact*/
+/*=========================================================contact==================================================*/
 .contact{
     position: relative;
 }
