--- a/assets/style.css
+++ b/assets/style.css
@@ -142,7 +142,7 @@ h3 span{
     height: 100%;
 }
 .about-container div{
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     /*height: 100%;
     width: 40%;*/
     margin: 5% 5% 0 0;
