--- a/assets/style.css
+++ b/assets/style.css
@@ -209,21 +209,21 @@ h3 span{
     position: absolute;
     left: 30px;
 }
-.skills-container{
+.skills-container {
     position: relative;
     left: 30px;
     top: 90%;
     padding: 40px 10%;
-    height: 200px;
-    width: 80%;
-    display: inline-flex;
+    height: 400px;
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    align-items: center;
+    justify-content: center;
 }
 .skills-container img{
-    height: 80px;
-    width: 80px;
-    display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
-    gap: 10px;
+    height: 100px;
+    width: 100px;
     margin: 20px 10px;
 }
 /*====================================================services===========================================*/
@@ -288,13 +288,16 @@ h3 span{
     position: absolute;
     font-size: 40px;
 }
+
 .projects-list div{
     position: center;
     transition: .5s;
 }
+
 .projects-list div:hover{
     transform: scale(1.1);
 }
+
 .projects-list div img{
     width: 100%;
     height: 86%;
@@ -302,6 +305,7 @@ h3 span{
     border-radius: 15%;
     padding: 5px;
 }
+
 .projects-list div h4{
     font-size: 20px;
     padding: 10px;
@@ -450,7 +454,7 @@ h3 span{
 .social-media-container div h5{
     text-align: center;
 }
-.social-media-container div i{
+.social-media-container div img{
     width: 50px;
     height: 50px;
     font-size: 30px;
@@ -548,7 +552,7 @@ form input, form textarea{
         font-size: 13px;
         font-weight: 100;
     }
-    .services-list div i {
+    .services-list div img {
         font-size: 40px;
         margin: 0 0 20px 0;
     }
@@ -596,10 +600,10 @@ form input, form textarea{
         right: 10px;
     }
     .nav_bar li {
-        padding: 5px;
+        padding: 2px;
     }
     .nav_bar a{
-        font-size: 15px;
+        font-size: 12px;
     }
     main:nth-child(2)>section>img {
         height: 55%;
@@ -614,6 +618,7 @@ form input, form textarea{
         font-size: 2.5rem;
         font-weight: 700;
         margin: -2px 0px 2px;
+        padding: 10px 0 0;
     }
 
     .home-container {
@@ -632,5 +637,39 @@ form input, form textarea{
         text-decoration: none;
         margin: 0px 20px 30px 0;
         font-size: 15px;
+    }
+    .about-container p {
+        text-align: center;
+        font-size: 12px;
+    }
+    .about-container {
+        justify-content: center;
+        height: 60%;
+        flex-direction: column;
+    }
+    .social-media-container {
+        width: 100%;
+        position: absolute;
+        top: 105%;
+        left: 0;
+        border-radius: 0px;
+    }
+    .social-media-container div img{
+        width: 30px;
+        height: 30px;
+        font-size: 30px;
+    }
+
+    .message-section button {
+        height: 8%;
+        width: 50%;
+        border: 4px solid #FF014F;
+        left: 50%;
+        font-size: 12px;
+    }
+    .message-section {
+        left: 10%;
+        top: 10%;
+        width: 80%;
     }
 }
