--- a/assets/style.css
+++ b/assets/style.css
@@ -21,12 +21,12 @@ body{
     right: 0;
     left: 0;
     display: flex;
-    padding: 20px 10%;
+    padding: 30px 10%;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
-    background: transparent;
-    height: 30px;
+    background: #202337;
+    height: 40px;
 }
 .nav_bar{
     position: absolute;
@@ -140,12 +140,11 @@ h3 span{
     justify-content: space-between;
     /*padding: 60px 12% ;*/
     height: 100%;
+
 }
 .about-container div{
-    /*border: 2px solid white;*/
-    /*height: 100%;
-    width: 40%;*/
     margin: 5% 5% 0 0;
+    width: 1000px;
 }
 .about-container div img{
     height: 100%;
@@ -153,8 +152,6 @@ h3 span{
     /*padding: 5% 0 0;*/
 }
 .about-container p{
-    /*height: 50%;
-    width: 60%;*/
     text-align: justify;
     margin: 50px 0 0 0;
 }
@@ -167,7 +164,7 @@ h3 span{
     font-weight: bold;
     border-radius: 20px;
     position: absolute;
-    left: 30%;
+    left: 35%;
     top: 100%;
 }
 .journey{
@@ -494,6 +491,11 @@ form input, form textarea{
     position: absolute;
     left: 70%;
 }
+/*=================================================footer==========================================================*/
+.footer{
+    position: relative;
+    top: revert;
+}
 
 @media (min-width: 1024px)and (max-width: 1440px){
     .home-container div h1{
@@ -732,6 +734,9 @@ form input, form textarea{
         justify-content: center;
         height: 60%;
         flex-direction: column;
+    }
+    .journey-container div p {
+        font-size: 14px;
     }
     .social-media-container {
         width: 100%;
