--- a/assets/style.css
+++ b/assets/style.css
@@ -96,6 +96,7 @@ section{
 }
 .home-image:hover{
     transform: scale(1.1);
+    background: #1B1D30;
 }
 .shadow-border{
     position: absolute;
@@ -164,9 +165,21 @@ main:nth-child(2)>section>a{
     right: 20px;
     margin: auto;
 }
-
+.shadow-topic{
+    text-align: center;
+    position: relative;
+}
+.shadow-topic h1{
+    color:  #000712;
+    font-size: 100px;
+    font-weight: 1000;
+    text-shadow: 2px 2px 10px black;
+}
 .topic-section{
     text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 40%;
 }
 h3{
     font-size: 45px;
@@ -174,11 +187,14 @@ h3{
     margin: 60px 0;
     font-family: Quicksand, sans-serif;
     color: white;
+    position: absolute;
+
 }
 h3 span{
     color: #FF014F;
     font-family: Quicksand, sans-serif;
 }
+
 
 /*=============================================================about===============================================*/
 .about{
