--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,7 @@ section{
     align-items: center;
     padding: 30px 10% 0;
     color: #9A98A8;
+    display: flex;
 }
 .home-container{
     /* position: relative;*/
@@ -86,7 +87,7 @@ section{
     background: #202337;
     border-radius: 20px;
     transition: .5s;
-    box-shadow: black 2px 2px 0 0;
+    box-shadow: black 2px 2px 10px;
 }
 .home-image img{
     top: 10%;
@@ -165,9 +166,12 @@ main:nth-child(2)>section>a{
     right: 20px;
     margin: auto;
 }
-.shadow-topic{
+.shadow-topic {
     text-align: center;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .shadow-topic h1{
     color:  #000712;
@@ -757,26 +761,55 @@ form input, form textarea{
     .nav_bar a{
         font-size: 10px;
     }
-    main:nth-child(2)>section>img {
-        height: 55%;
-        width: 57%;
-        margin: 18px 0 0 0;
-        border-style: none;
-        position: absolute;
-        left: 20%;
-        top: 10%;
-    }
-    .home-container div h1 {
-        font-size: 2.5rem;
-        font-weight: 700;
-        margin: -2px 0px 2px;
-        padding: 10px 0 0;
-    }
 
-    .home-container {
+    .shadow-border {
+        top: 10%;
+        left: 8%;
+        width: 100%;
+        height: 300px;
+    }
+    .headings {
         position: absolute;
+        top: 1%;
+    }
+    .headings h1{
+        font-size: 32px;
+        font-family: Quicksand, sans-serif;
+    }
+    .headings h1 span{
+        font-size: 32px;
+        font-family: Quicksand, sans-serif;
+        color: #FF014F;
+    }
+    .home-container {
         left: 10%;
-        top: 60%;
+        top: 20%;
+        padding: 120px 0;
+    }
+    .home-image {
+        width: 300px;
+        height: 320px;
+    }
+    .status h3 {
+        font-family: Quicksand, sans-serif;
+        font-size: 20px;
+    }
+    .status h3 span {
+        font-size: 18px;
+    }
+    .shadow-topic h1{
+        font-size: 50px;
+    }
+    h3 {
+        font-size: 40px;
+        font-weight: 700;
+    }
+    .topic-section {
+        text-align: center;
+        position: absolute;
+        right: 0;
+        left: 0;
+        top: 10%;
     }
     .social-media a {
         display: inline-flex;
