--- a/assets/style.css
+++ b/assets/style.css
@@ -65,7 +65,7 @@ section{
 .home-container{
     /* position: relative;*/
     left: 10%;
-    top: 10%;
+    top: 8%;
 }
 .headings{
     position: absolute;
@@ -172,6 +172,7 @@ main:nth-child(2)>section>a{
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 .shadow-topic h1{
     color:  #000712;
@@ -761,10 +762,9 @@ form input, form textarea{
     .nav_bar a{
         font-size: 10px;
     }
-
     .shadow-border {
-        top: 10%;
-        left: 8%;
+        top: 20%;
+        left: 3%;
         width: 100%;
         height: 300px;
     }
@@ -801,8 +801,8 @@ form input, form textarea{
         font-size: 50px;
     }
     h3 {
-        font-size: 40px;
-        font-weight: 700;
+        font-size: 30px;
+        font-weight: 500;
     }
     .topic-section {
         text-align: center;
