--- a/assets/style.css
+++ b/assets/style.css
@@ -159,104 +159,7 @@ section{
 .social-media a:hover{
     box-shadow: 0 0 10px #FF014F;
 }
-/*.home{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 10% 0;
-}
-.home-container{
-    !* position: relative;*!
-    left: 10%;
-    top: 10%;
-}
-.headings{
-    position: absolute;
-    top: 12%;
-    left: 22%;
-}
-.headings h1{
-    font-size: 50px;
-    font-family: Quicksand, sans-serif;
-}
-.headings h1 span{
-    font-size: 50px;
-    font-family: Quicksand, sans-serif;
-    color: #FF014F;
-}
-.home-image{
-    width: 300px;
-    height: 370px;
-    background: #202337;
-    border-radius: 20px;
-}
-.home-image img{
-    top: 10%;
-    height: 90%;
-    width: 100%;
-    position: relative;
-}
-.shadow-border{
-    position: absolute;
-    top: 26%;
-    left: 40%;
-    width: 300px;
-    height: 370px;
-    border: 2px solid #202337;
-    border-radius: 20px;
-}
-.home-container p{
-    position: absolute;
-    left: 22%;
-    top: 35%;
-    width: 200px;
-    padding: 10px;
-}
-.status{
-    position: absolute;
-    top: 60%;
-    left: 63%;
-    font-size: 30px;
-}
-.status h3{
-    font-family: Quicksand, sans-serif;
-}
-.status h3 span{
-    color: #8C6FFF;
-    font-family: Quicksand, sans-serif;
-}
-.line {
-    border: 2px solid #8C6FFF;
-    border-radius: 10px;
-    position: absolute;
-    top: 81%;
-    left: 63%;
-    width: 10%;
-}
-.social-media{
-    padding: 5% 0 ;
-    position: absolute;
-}
 
-.social-media a{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid #FF014F;
-    text-decoration: none;
-    margin: 10px;
-    font-size: 20px;
-}
-
-.social-media a:hover{
-    box-shadow: 0 0 10px #FF014F;
-}*/
 main:nth-child(2)>section>a{
     font-size: 40px;
     position: fixed;
@@ -667,14 +570,28 @@ form input, form textarea{
     top: revert;
 }
 
-@media (min-width: 1024px)and (max-width: 1440px){
-    .home-container div h1{
-        font-size:3.5rem;
+@media (max-width: 1024px){
+    .shadow-border {
+        top: 20%;
+        left: 37%;
     }
-
-    .about img {
-        height: 50%;
-        width: 40%;
+    .headings {
+        top: 5%;
+        left: 16%;
+    }
+    .home-container p {
+        left: 16%;
+        top: 40%;
+    }
+    .status {
+        left: 68%;
+    }
+    .line {
+        top: 88%;
+        left: 68%;
+    }
+    .headings h1 span {
+        font-size: 45px;
     }
 
     .skills-container img{
@@ -682,7 +599,7 @@ form input, form textarea{
         width: 70px;
         margin: 0 5px;
     }
-
+/*
     .projects-list{
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
@@ -694,15 +611,45 @@ form input, form textarea{
 
     .projects-list div h4 {
         font-size: 20px;
-    }
+    }*/
 
 }
 
-@media (min-width: 768px)and (max-width: 1024px) {
-    .home-container div h1 {
-        font-size: 2.5rem;
-    }
+@media (max-width: 768px){
 
+    .nav_bar {
+        right: 50px;
+    }
+    .nav_bar li {
+        padding: 10px;
+        font-weight: bold;
+    }
+    .shadow-border {
+        top: 20%;
+        left: 32%;
+    }
+    .headings {
+        top: 5%;
+        left: 8%;
+    }
+    .headings h1 {
+        font-size: 40px;
+        font-weight: 100;
+    }
+    .headings h1 span {
+        font-size: 42px;
+    }
+    .home-container p {
+        left: 4%;
+        top: 40%;
+    }
+    .status {
+        left: 74%;
+    }
+    .line {
+        top: 88%;
+        left: 74%;
+    }
     .social-media a {
         width: 30px;
         height: 30px;
@@ -712,6 +659,20 @@ form input, form textarea{
         height: 60px;
         width: 50px;
         margin: 0 5px;
+    }
+    .shadow-topic{
+
+    }
+    .shadow-topic h1 {
+        font-size: 80px;
+        font-weight: 800;
+    }
+    .topic-section {
+        text-align: center;
+        position: absolute;
+        top: 12%;
+        left: 0;
+        right: 0;
     }
     .services-list {
         display: grid;
@@ -735,9 +696,6 @@ form input, form textarea{
     .projects-list div h4 {
         font-size: 15px;
     }
-    .projects-list {
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    }
     .projects a {
         right: 50px;
         bottom: 0px;
@@ -753,10 +711,22 @@ form input, form textarea{
     .assignment-container div img {
         width: 100%;
     }
-
+    .assigment-layer img{
+        height: 10px;
+        width: 10px;
+    }
     .social-media-container {
         height: 70%;
     }
+    .assigment-layer a {
+        width: 3rem;
+        height: 3rem;
+    }
+    .assigment-layer h4 {
+        font-size: 1.0rem;
+        opacity: 2;
+    }
+
     .message-section button {
         width: 40%;
         border: 3px solid #FF014F;
@@ -767,7 +737,7 @@ form input, form textarea{
         font-size: 11px;
     }
 }
-@media (min-width: 425px) and  (max-width: 768px){
+/*@media (min-width: 425px) and  (max-width: 768px){
     .nav_bar {
         right: 10px;
     }
@@ -849,7 +819,7 @@ form input, form textarea{
         top: 10%;
         width: 80%;
     }
-}
+}*/
 @media (max-width: 425px){
     .nav_bar {
         right: 10px;
@@ -887,6 +857,16 @@ form input, form textarea{
     .home-image {
         width: 300px;
         height: 320px;
+    }
+    .shadow-border {
+        top: 28%;
+        left: 16%;
+         width: 300px;
+        height: 300px;
+    }
+    .headings {
+        top: 1%;
+        padding: 26px;
     }
     .status h3 {
         font-family: Quicksand, sans-serif;
