--- a/assets/style.css
+++ b/assets/style.css
@@ -47,8 +47,8 @@ body{
     font-size: 18px;
 }
 
-section{
-   /* height: 100vh;*/
+main {
+    padding: 30px 0 0;
 }
 
 .home{
@@ -139,7 +139,7 @@ section{
     width: 10%;
 }
 .social-media{
-    padding: 5% 0 ;
+    padding: 3% 0 ;
     position: absolute;
 }
 
@@ -160,7 +160,7 @@ section{
     box-shadow: 0 0 10px #FF014F;
 }
 
-main:nth-child(2)>section>a{
+.up-arrow{
     font-size: 40px;
     position: fixed;
     bottom: 20px;
@@ -227,6 +227,7 @@ h3 span{
 .about-container p{
     text-align: justify;
     margin: 50px 0 0 0;
+    width: 100%;
 }
 .about button {
     height: 50px;
@@ -345,13 +346,34 @@ h3 span{
     width: 100%;
     position: relative;
 }
-.projects-list{
+
+.project-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 30px;
     margin: 40px 10px;
+    padding: 0 10%;
 }
-.projects a{
+.project-card{
+    border: 2px solid #353250;
+    position: relative;
+    padding: 20px;
+    border-radius: 25px;
+    background: #202337;
+}
+.project-card img{
+    height: 60%;
+    width: 50%;
+    border-radius: 25px;
+    padding: 10px;
+}
+.project-card h4{
+    color: #9A98A8;
+}
+.project-card p{
+    color: #9A98A8;
+}
+.more-arrow{
     right: 100px;
     bottom: 0px;
     margin: auto;
@@ -359,28 +381,13 @@ h3 span{
     font-size: 40px;
 }
 
-.projects-list div{
+.project-card img{
     position: center;
     transition: .5s;
 }
 
-.projects-list div:hover{
+.project-card:hover img{
     transform: scale(1.1);
-}
-
-.projects-list div img{
-    width: 100%;
-    height: 86%;
-    border: 1px solid #353250;
-    border-radius: 15%;
-    padding: 5px;
-}
-
-.projects-list div h4{
-    font-size: 20px;
-    padding: 10px;
-    text-align: center;
-
 }
 
 /*=======================================================assignment=============================================*/
