--- a/assets/style.css
+++ b/assets/style.css
@@ -617,6 +617,10 @@ form input, form textarea{
     top: revert;
 }
 
+@media (max-width: 1440px){
+
+}
+
 @media (max-width: 1024px){
     .shadow-border {
         top: 20%;
@@ -732,89 +736,7 @@ form input, form textarea{
         font-size: 11px;
     }
 }
-/*@media (min-width: 425px) and  (max-width: 768px){
-    .nav_bar {
-        right: 10px;
-    }
-    .nav_bar li {
-        padding: 2px;
-    }
-    .nav_bar a{
-        font-size: 12px;
-    }
-    main:nth-child(2)>section>img {
-        height: 55%;
-        width: 57%;
-        margin: 18px 0 0 0;
-        border-style: none;
-        position: absolute;
-        left: 20%;
-        top: 10%;
-    }
-    .home-container div h1 {
-        font-size: 2.5rem;
-        font-weight: 700;
-        margin: -2px 0px 2px;
-        padding: 10px 0 0;
-    }
 
-    .home-container {
-        position: absolute;
-        left: 10%;
-        top: 60%;
-    }
-    .social-media a {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        border: 2px solid #FF014F;
-        text-decoration: none;
-        margin: 0px 20px 30px 0;
-        font-size: 15px;
-    }
-    .about-container p {
-        text-align: center;
-        font-size: 12px;
-    }
-
-    .about button {
-        top: 110%;
-    }
-    .about-container {
-        justify-content: center;
-        height: 60%;
-        flex-direction: column;
-    }
-
-    .social-media-container {
-        width: 100%;
-        position: absolute;
-        top: 105%;
-        left: 0;
-        border-radius: 0px;
-    }
-    .social-media-container div img{
-        width: 30px;
-        height: 30px;
-        font-size: 30px;
-    }
-
-    .message-section button {
-        height: 8%;
-        width: 50%;
-        border: 4px solid #FF014F;
-        left: 50%;
-        font-size: 12px;
-    }
-    .message-section {
-        left: 10%;
-        top: 10%;
-        width: 80%;
-    }
-}*/
 @media (max-width: 425px){
     .nav_bar {
         right: 10px;
@@ -991,5 +913,44 @@ form input, form textarea{
         height: 60px;
         width: 60px;
         margin: 20px 8px;
+    }
+}
+
+@media (max-width: 320px){
+    .nav_bar a{
+        font-size: 8px;
+    }
+    .home-image {
+        width: 250px;
+    }
+    .shadow-topic h1{
+        font-size: 40px;
+    }
+    .skills-container img {
+        height: 50px;
+        width: 60px;
+        margin: 10px 5px;
+    }
+    .face-front, .face-back {
+        width: 250px;
+    }
+    .project-container {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+    .project-card p {
+        font-size: 12px;
+    }
+    .project-card img{
+        width: 70%;
+        height: 50%;
+    }
+    .status h3 {
+        font-size: 15px;
+    }
+    .status h3 span {
+        font-size: 15px;
+    }
+    .assignment-container {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
