--- a/assets/style.css
+++ b/assets/style.css
@@ -842,9 +842,12 @@ form input, form textarea{
         text-align: center;
         font-size: 12px;
     }
-
     .about button {
-        top: 110%;
+        height: 40px;
+        width: 110px;
+        border: 3px solid #FF014F;
+        font-size: 12px;
+        margin: 10px;
     }
     .about-container {
         justify-content: center;
