--- a/assets/style.css
+++ b/assets/style.css
@@ -296,6 +296,11 @@ h3 span{
     height: 100px;
     width: 100px;
     margin: 20px 10px;
+    transition: 1s;
+}
+.skills-container img:hover {
+    transform: scale(1.1);
+    box-shadow: #353250 2px 2px 5px;
 }
 /*====================================================services===========================================*/
 .services{
@@ -403,7 +408,7 @@ h3 span{
 }
 .project-card img{
     height: 60%;
-    width: 50%;
+    width: 70%;
     border-radius: 25px;
     padding: 10px;
 }
@@ -711,6 +716,7 @@ form input, form textarea{
         width: 50px;
         margin: 0 5px;
     }
+
     .shadow-topic{
 
     }
