--- a/assets/style.css
+++ b/assets/style.css
@@ -71,6 +71,21 @@ main {
     top: 10%;
     left: 22%;
     text-align: right;
+
+  /*  animation-name: heading-anima;
+    animation-iteration-count: 1;
+    animation-duration: 1.2s;
+    animation-fill-mode: both;
+    animation-timing-function: linear;*/
+}
+@keyframes heading-anima {
+    0% {
+        left: 0;
+    }
+
+    100% {
+        left: 22%;
+    }
 }
 .headings h1{
     font-size: 50px;
@@ -120,6 +135,7 @@ main {
     position: absolute;
     top: 48%;
     left: 63%;
+    display: flex;
 }
 .status h3{
     font-family: Quicksand, sans-serif;
@@ -190,11 +206,10 @@ main {
 h3{
     font-size: 45px;
     font-weight: 750;
-    margin: 40px 0;
+    margin: 50px 0;
     font-family: Quicksand, sans-serif;
     color: white;
     position: absolute;
-
 }
 h3 span{
     color: #FF014F;
@@ -213,7 +228,7 @@ h3 span{
     justify-content: space-between;
     /*padding: 60px 12% ;*/
     height: 100%;
-
+    margin: -40px;
 }
 .about-container div{
     margin: 5% 5% 0 0;
@@ -238,7 +253,7 @@ h3 span{
     font-weight: bold;
     border-radius: 20px;
     position: absolute;
-    left: 50%;
+    left: 43%;
     top: 100%;
 }
 .journey{
@@ -365,7 +380,7 @@ h3 span{
     z-index: 2;
 }
 .content-wrap i{
-    width: 100px;
+    font-size: 50px;
 }
 .content-wrap h4{
     margin-top: 8px;
@@ -866,6 +881,9 @@ form input, form textarea{
     }
     .project-card p{
         font-size: 14px;
+    }
+    .assigment-layer h4{
+        font-size: 1rem;
     }
     .social-media-container {
         width: 100%;
