--- a/assets/style.css
+++ b/assets/style.css
@@ -135,7 +135,7 @@ main {
     position: absolute;
     top: 48%;
     left: 63%;
-    display: flex;
+    /*display: flex;*/
 }
 .status h3{
     font-family: Quicksand, sans-serif;
@@ -145,6 +145,7 @@ main {
     color: #8C6FFF;
     font-family: Quicksand, sans-serif;
     font-size: 30px;
+
 }
 .line {
     border: 2px solid #8C6FFF;
@@ -856,7 +857,7 @@ form input, form textarea{
         border-radius: 50%;
         border: 2px solid #FF014F;
         text-decoration: none;
-        margin: 0px 20px 30px 0;
+        margin: 10px;
         font-size: 15px;
     }
     .about-container p {
@@ -950,6 +951,35 @@ form input, form textarea{
     .home-image {
         width: 250px;
     }
+    .home-container p {
+        left: 30px;
+        top: 93%;
+        text-align: left;
+        font-size: 14px;
+    }
+    .status{
+        left: 40px;
+        top: 76%;
+    }
+    .status h3 {
+        font-size: 15px;
+        white-space: nowrap;
+    }
+    .status h3 span {
+        font-size: 15px;
+    }
+    .line {
+        top: 93%;
+        left: 13%;
+        width: 70px;
+    }
+    .social-media {
+        top: 102%;
+        left: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .shadow-topic h1{
         font-size: 40px;
     }
@@ -970,12 +1000,6 @@ form input, form textarea{
     .project-card img{
         width: 70%;
         height: 50%;
-    }
-    .status h3 {
-        font-size: 15px;
-    }
-    .status h3 span {
-        font-size: 15px;
     }
     .assignment-container {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
