--- a/assets/style.css
+++ b/assets/style.css
@@ -480,24 +480,27 @@ h3 span{
 }
 .assignment-card{
     width: 100%;
-    height: 100%;
+    height: 250px;
     border: 1px solid #353250;
+    /*margin: 2px;*/
+    padding: 40px;
+
 }
 
 .assignment-container .assignment-card{
     position: relative;
-    border-radius: 2rem;
     box-shadow: 0 0 1rem black;
     overflow: hidden;
     display: flex;
+    border-radius: 25px;
 }
 
 .assignment-card img{
     width: 100%;
-    height: 250px;
+    height: 180px;
     transition: 5s ease;
-    padding: 20px;
-    border-radius: 2.8rem;
+    border-radius: 25px;
+
 }
 .assignment-card:hover img{
     transform: scale(1.1);
@@ -539,9 +542,9 @@ h3 span{
     border: 2px solid white;
     margin: 10%;
 }
-.assigment-layer a img{
-    width: 30px;
-    height: 30px;
+.assigment-layer a {
+    font-size: 30px;
+    text-decoration: none;
 }
 
 /*==========================================================gallery===============================================*/
