--- a/assets/style.css
+++ b/assets/style.css
@@ -156,8 +156,14 @@ main {
     width: 10%;
 }
 .social-media{
-    padding: 3% 0 ;
+    padding: 3% 0;
     position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
 }
 
 .social-media a{
@@ -221,48 +227,78 @@ h3 span{
 /*=============================================================about===============================================*/
 .about{
     /*position: relative;*/
-    padding: 50px 10%;
-}
-.about-container{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    /*padding: 60px 12% ;*/
-    height: 100%;
-    margin: -40px 0;
-}
-.about-container div{
-    margin: 5% 5% 0 0;
-}
-.about-container div img{
-    height: 100%;
     width: 100%;
-}
-.about-container h3{
-    left: 44%;
-    font-family: Poppins, sans-serif;
-    font-size: 40px;
-}
-.about-container p{
-    text-align: justify;
-    margin: 135px 0 0 0;
-    width: 100%;
-    color: #9A98A8;
+    /*padding: 50px 10%;*/
 }
 
-.about button {
-    height: 50px;
-    width: 140px;
-    border:4px solid #FF014F;
-    background-color: transparent;
-    color: white;
-    font-weight: bold;
-    border-radius: 20px;
-    position: absolute;
-    left: 44%;
-    top: 70%;
+.details{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
-.about button:hover{
+.article{
+    width: 100%;
+    display: flex;
+    gap: 90px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: 25px;
+    margin-right: 25px;
+    transition: all 2s;
+}
+.about-image{
+    background: url(images/homeImage.png);
+    background-size: cover;
+    background-position: center;
+    width: 300px;
+    height: 400px;
+    border-radius: 0.9rem;
+    margin-bottom: 69px;
+}
+.about-description{
+    width: 667px;
+    display: flex;
+    flex-direction: column;
+}
+.about-description h2{
+    font-weight: 600;
+    font-size: 32px;
+    /* line-height: 52px; */
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+.about-description p{
+    font-size: 16px;
+    font-family: poppins, sans-serif;
+    color: hsl(250, 8%, 45%);
+    margin-top: 2px;
+}
+.about-description p:last-of-type{
+    margin-bottom: 20px;
+}
+.about-description button{
+    position: relative;
+    color: white;
+    text-align: left;
+    font-weight: 500;
+    top: 3px;
+    border-radius: 25px;
+    box-shadow: 28px 28px 50px rgba(13, 39, 80, 0.10);
+    background-color: #353250;
+    border-width: 0;
+    width: 150px;
+    padding-left: 19px;
+    /* left: 3px; */
+    height: 47px;
+    margin-top: 3px;
+    margin-bottom: 80px;
+    transition: all .6s;
+}
+.about-description button:hover{
+    transform: scale(1.1);
     background: #FF014F;
 }
 .journey{
@@ -775,6 +811,14 @@ form input, form textarea{
     .social-media-container div h5 {
         text-align: center;
         font-size: 11px;
+    }
+}
+
+@media (min-width: 400px)and (max-width: 700px){
+    .line {
+        top: 90%;
+        left: 10%;
+        width: 70px;
     }
 }
 
