--- a/assets/style.css
+++ b/assets/style.css
@@ -202,7 +202,7 @@ main {
     color:  #000712;
     font-size: 100px;
     font-weight: 1000;
-    text-shadow: 2px 2px 10px black;
+    text-shadow: 2px 2px 15px black;
 }
 .topic-section{
     text-align: center;
@@ -241,7 +241,7 @@ h3 span{
 .article{
     width: 100%;
     display: flex;
-    gap: 90px;
+    gap: 40px;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
@@ -262,6 +262,7 @@ h3 span{
     width: 667px;
     display: flex;
     flex-direction: column;
+    padding: 10px;
 }
 .about-description h2{
     font-weight: 600;
@@ -269,12 +270,14 @@ h3 span{
     /* line-height: 52px; */
     margin-top: 0;
     margin-bottom: 8px;
+    text-align: center;
 }
 .about-description p{
     font-size: 16px;
     font-family: poppins, sans-serif;
-    color: hsl(250, 8%, 45%);
+    color: #9A98A8;
     margin-top: 2px;
+    text-align: center;
 }
 .about-description p:last-of-type{
     margin-bottom: 20px;
